# CenterPass

./: .env.local  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 8704bd5d94a9_add_processing_progress_to_video.py  ef14dc3ccca2_init.py
app/: main.py
app/api/videos/: router.py
app/core/: settings.py
app/core/ingestion/: extract_frames.py
app/services/: video_service.py
database/: session.py
database/enums/: video_processing_status.py
database/models/: __init__.py  frame.py  video.py
